kubernetes/apps/database/emqx/cluster/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "emqx.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
